--- a/src/index.html
+++ b/src/index.html
@@ -434,6 +434,7 @@
                 </div>
             </section>
             <section id="contact" class="contact container_over">
+                <div class="container">
                     <div class="row">
                         <div class="col-md-12 form wow fadeInDown" data-wow-delay="0.3s">
                             <div class="content">
@@ -482,7 +483,8 @@
                                 </div> 
                             </div>
                         </div>
-                    </div>    
+                    </div>
+                    </div>
             </section>
             <section class="section-map">
                 <div class="container">
